@@ -1,3 +1,14 @@
+2018-01-18  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
+	XOAUTH2 authentication support is introduced (experimental).
+
+	* FLIM-ELS: Install sasl-xoauth2.el when oauth2.el is installed.
+
+	* sasl.el (sasl-mechanisms, sasl-mechanism-alist): Add entry for
+	XOAUTH2.
+
+	* sasl-xoauth2.el: New file.
+
 2016-12-06  Piotr Trojanek  <piotr.trojanek@gmail.com>
 
 	* luna.el (luna-class-find-member)
